# purelink

./: .gitignore  CLAUDE.md  README.md  USAGE_GUIDE.md  arch.md  main.py  mimic-settings.json  package-lock.json  pyproject.toml
.claude/: settings.local.json
archived/app-ex/gemini-mcp-interface/: App.tsx  README.md  index.html  metadata.json  package.json  types.ts
archived/app-ex/gemini-mcp-interface/components/: Header.tsx  InputArea.tsx  (+2 more)
archived/app-ex/mcp-maps-basic/: README.md  index.html  index.tsx  mcp_maps_server.ts  package.json  playground.ts
archived/current-state/: main.py  query_db.py
archived/current-state/capture/: intent_capture.py
archived/current-state/storage/: __init__.py  db_interface.py  duck_store.py
archived/data-discover-methods-legacy/: index.jsonl
archived/discovery/: fragmentKB1.csv  search_gather_agent.py
archived/discovery-legacy/: __init__.py  method_discovery.py  method_store.py
archived/domains/: domainCategories.json  file_definition.md  task_list.md
claude-plans/: 20250120_143000_output_methods_discovery.md  20250120_directory_analysis.md  20250821_150500_url_verification_implementation.md  20250822_url_content_validation_plan.md  context-store-20250820-1532.md
docs/: README.md  uv-quickstart.md  workflow-guide.md
mvp/: capture_intent_poc_v2.py  discover_methods_poc_v1.py  discover_methods_poc_v2.py
notebooks/: capture_intent_poc_v1.ipynb
src/: __init__.py  __main__.py
src/capture/: __init__.py  intent_capture.py
src/discovery/: candidate_lookup.py  method_discovery.py
src/utils/: llm_client.py
(+3 files in other folders)
